update patient demographics is working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/demographics
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # create and drop table, good for testing, production set to none or comment it
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 
 # app custom property, if true, insert data for testing
 app.db.init.enabled=true
