--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   demographics:
     container_name: app-springboot-postgresql
     environment:
-      - SPRING_DATASOURCE_PASSWORD=password
-      - SPRING_DATASOURCE_USER=postgres
-      - SPRING_DATASOURCE_URL:jdbc:postgresql://dbpostgresql:5432/demographics
+      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_URL: jdbc:postgresql://dbpostgresql:5432/demographics
 #    image: app-springboot-postgresql
     build: ./
     ports:
@@ -20,17 +20,17 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=demographics
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+      POSTGRES_DB: demographics
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data
     networks:
       - springboot-network
 
 networks:
   springboot-network:
 
-volumes:
-  postgres_data:
+#volumes:
+#  postgres_data:
 
