--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # app custom property, if true, insert data for testing
 app.db.init.enabled=true
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
