create a table an insert data when application starts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,9 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.url=jdbc:postgresql://localhost:5432/demographics
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# create and drop table, good for testing, production set to none or comment it
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=update
 
 # app custom property, if true, insert data for testing
 app.db.init.enabled=true
@@ -22,3 +19,15 @@ app.db.init.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# Turn off Hibernate table generation since you are using schema.sql
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Ensure SQL scripts (schema.sql and data.sql) are executed
+spring.datasource.initialization-mode=always
+#spring.datasource.schema=classpath:schema.sql
+#spring.datasource.data=classpath:data.sql
+
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+#spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
