thyme leaf ui showed up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # app custom property, if true, insert data for testing
 app.db.init.enabled=true
 
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 
 # Turn off Hibernate table generation since you are using schema.sql
 spring.jpa.hibernate.ddl-auto=none
